{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "3ba4e288-01e5-411e-9364-388a4af8159c",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7d6e0a34-d3f0-4b94-ac7f-d5353bd12220",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "10b4b2b8-b013-4ed0-a694-b5b54e8ac222",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "342f9a27-b2b4-40b0-b68e-3bc5cf492515",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "ed7a90c5-2b87-46bf-87c0-0b5cc6f4489b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "b5819e15-706c-4de2-b66f-94e936b7c8a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "FireAbility",
                    "type": "Button",
                    "id": "5adef632-8850-43f7-868a-2d5764924608",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrowAbilityPositive",
                    "type": "Button",
                    "id": "a25ef3f2-b0b3-4425-9c2b-76bb2340f577",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrowAbilityNegative",
                    "type": "Button",
                    "id": "e2913313-e8bb-4d1e-ace8-556d43ac45bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SuperJumpAbility",
                    "type": "Button",
                    "id": "6bfbe566-4762-4855-b62d-3337d36895a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SequenceAbility",
                    "type": "Button",
                    "id": "911b1f15-8265-4cf6-b096-1b035960bbfe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "a4426983-c02e-4450-a4a1-cb0e858a16de",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9b9bc3c6-fd4c-4f4d-b290-d5a0bcaeaff5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e92a33a7-ebab-4185-a795-b1d7c5fd448d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "624249ad-0438-4734-a285-7f1a4053f8b9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b7f334bc-7bb2-4af1-969e-45d644e45567",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "979abd22-9e53-4a2e-b9d5-8d88f1bdaa65",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db96be8e-cbeb-47f8-b138-5ae47923a25c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db7dc9cf-3712-48c2-9acf-e2484fd26367",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25975f15-4229-4e0a-8f15-5ac97cf68deb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b16da53-d48c-4d51-8096-bba4a3282881",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ed98635-f7f5-4a12-bf3d-f74755176e3b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eea4e9e0-780e-4098-8cfc-4e7bb74c2224",
                    "path": "<Keyboard>/numpadPlus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrowAbilityPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40b804d4-6676-40c0-9486-02bdd7dac550",
                    "path": "<Keyboard>/#(+)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrowAbilityPositive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b19e214f-209e-45f0-8f38-ac06f6267c19",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuperJumpAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e44b1f14-ebcd-4d6a-b05a-61cb3f27da4a",
                    "path": "<Keyboard>/#(-)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrowAbilityNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21963f3e-688f-4030-a9db-1184e3859622",
                    "path": "<Keyboard>/numpadMinus",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrowAbilityNegative",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bda0bac-45e0-457c-b2d1-db3a9622c6ed",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SequenceAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}